Skin modifier dont work with 0 face objects #41677

Closed
opened 2014-09-01 16:16:39 +02:00 by Karja Krähwald · 15 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (2.71 release) + 35bc266

Short description of error
Objects with Skin modifier dont show up in Game Engine if its geometry have 0 (zero) faces.

Exact steps for others to reproduce the error
SkinBugGE.blend

  • Add a Plane.

  • Give it a Skin modifier.

    • Press P to start the GE - works, you can see the skinned mesh.
  • Plane Editmode: Delete one vertice to get kind of a tube.

    • Press P to start the GE - Object disappears completely.
**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (2.71 release) + 35bc266 **Short description of error** Objects with Skin modifier dont show up in Game Engine if its geometry have 0 (zero) faces. **Exact steps for others to reproduce the error** [SkinBugGE.blend](https://archive.blender.org/developer/F107888/SkinBugGE.blend) - Add a Plane. - Give it a Skin modifier. - Press P to start the GE - works, you can see the skinned mesh. - Plane Editmode: Delete one vertice to get kind of a tube. - Press P to start the GE - Object disappears completely.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

This comment was removed by @karja

*This comment was removed by @karja*

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

I'm pretty sure the BGE was never able to render objects without faces unless you assigned a wireframe shader to it.

The mesh doesn't have a surface to begin with, and most surface shaders are designed to work with faces, so no surface means nothing solid to render. You'd get the same using BI and Cycles.

I'm pretty sure the BGE was never able to render objects without faces unless you assigned a wireframe shader to it. The mesh doesn't have a surface to begin with, and most surface shaders are designed to work with faces, so no surface means nothing solid to render. You'd get the same using BI and Cycles.

Not sure what you mean, Skin works just fine in BI and Cycles.

The problem is indeed that GE searches a face to display the skinned mesh.
A workaround for example is to add one face, and then hide it with mask modifier, before other operations follow.

Campbell says Skin generally works best with loose edges - you can test this by yourself very easily with a monkey mesh + Skin modifier.
So I still hope this is an issue that can be solved by code.

Not sure what you mean, Skin works just fine in BI and Cycles. The problem is indeed that GE searches a face to display the skinned mesh. A workaround for example is to add one face, and then hide it with mask modifier, before other operations follow. Campbell says Skin generally works best with loose edges - you can test this by yourself very easily with a monkey mesh + Skin modifier. So I still hope this is an issue that can be solved by code.

Added subscribers: @brita, @Moguri, @Sergey

Added subscribers: @brita, @Moguri, @Sergey

@Moguri, @brita, can you look into this report please?

@Moguri, @brita, can you look into this report please?

Added subscriber: @panzergame

Added subscriber: @panzergame

I really don't understand this bug report : Why apply a skin modifier on an empty object ?

I really don't understand this bug report : Why apply a skin modifier on an empty object ?

With 0 face object I mean a mesh without faces, not an empty.
You can use it for low poly meshes or stylized geometry (bone meshes, water waves)
or for (roots of) a tree, for example. Simply what you want.

With 0 face object I mean a mesh without faces, not an empty. You can use it for low poly meshes or stylized geometry (bone meshes, water waves) or for (roots of) a tree, for example. Simply what you want.

This comment was removed by @panzergame

*This comment was removed by @panzergame*
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Aaron Carlisle self-assigned this 2019-06-29 02:19:58 +02:00
Member

This task is being closed because the BGE has been removed in Blender 2.8.

This task is being closed because the BGE has been removed in Blender 2.8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41677
No description provided.